# pon_shop

./: .gitignore  down.sh  up.sh
DB/Structure/: Scheme.plantuml
docs/: Scheme.plantuml  api_structure.md
services/kafka_service/: docker-compose.yml
services/order_service/: .env  docker-compose.yml  requirements.txt
services/order_service/app/: main.py
services/order_service/tests/: test_order_service.py
services/product_service/: Dockerfile  docker-compose.yml
services/product_service/products/: models.py  (+3 more)
services/review_service/: .env  Dockerfile  docker-compose.yml  go.mod  go.sum  main.go
services/user_service/: .env  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
services/user_service/app/: config.py  main.py
services/user_service/app/alembic/: env.py
services/user_service/app/alembic/versions/: 877a705ce7f6_.py
services/user_service/app/api/v1/endpoints/: dependencies.py  user.py
services/user_service/app/api/v1/schemas/: user.py
services/user_service/app/application/services/: user_service.py
services/user_service/app/domain/interfaces/: user_repository.py
services/user_service/app/domain/models/: user.py
services/user_service/app/infrastructure/database/: session.py
services/user_service/app/infrastructure/database/mappers/: user_mapper.py
services/user_service/app/infrastructure/database/models/: user.py
services/user_service/app/infrastructure/database/repositories/: user_repository_impl.py
services/user_service/entrypoint/: start.sh
tests/user_service_test/: conftest.py  test_api.py
(+17 files in other folders)
