[project]
name = "user-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.15.2",
    "email-validator>=2.2.0",
    "fastapi[standard,standart]>=0.115.12",
    "psycopg>=3.2.6",
    "psycopg-binary>=3.2.6",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]

[tool.ruff]
select = [
  "E", "W", "F",
  "B", "C", "N",
  "UP",
  "I",
]

[tool.mypy]
exclude = 'venv|.venv|env|.env'
ignore_missing_imports = true
strict_optional = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
follow_imports = "silent"
